--- a/player/index.html
+++ b/player/index.html
@@ -16,12 +16,11 @@
     <script>
         $(document).ready(function() {
             if (typeof newrelic === 'object' && typeof newrelic.setPageViewName === 'function') {
-                newrelic.setPageViewName('/idolmaster/index.php/smart_phone_flash/convert/idol_storySsSsflashSsSs305SsSs3SsSs1SsSsidol_gallery--idol_detail--1593bfefaa649ce28d0b586bbcee2c81--2SsSs0/0/0/0/1/0/1/0/1');
+                newrelic.setPageViewName('/idolmaster/index.php/smart_phone_flash/convert/idol_storySsSsflashSsSs122SsSs2SsSs1SsSsidol_gallery--idol_detail--8b2b95f91390863d0aefcce275216963--2SsSs');
             }
         });
     </script>
     <title>ｱｲﾄﾞﾙﾏｽﾀｰ ｼﾝﾃﾞﾚﾗｶﾞｰﾙｽﾞ </title>
-    <style>#container{ position:relative; }#voiceTouch{ display:block;position:absolute;top:0;left:0;z-index:100;width:100%;height:150%;-webkit-tap-highlight-color:rgba(0,0,0,0); }.switchBt{ display:block;position:absolute;z-index:200; }.selectSwitchBt{ display:block;position:absolute;z-index:210; }.scrollBt{ display:block;position:absolute;z-index:200; }</style>
     <style>#mbga-pf-footer {display:none;}</style>
     <script>
         var isTouch = ('ontouchstart' in window);
@@ -73,9 +72,8 @@
         window.onunload = function() {};
         window.onload = function() {
             var option = {
-                enableButton: false,
-                enableTouch: false,
-                partialDraw: getPexPartialDraw(),
+                enableButton: true,
+                enableTouch: true,
                 delayEval: false,
                 operation: {
                     lighter_tgt: "lighter"
@@ -130,7 +128,7 @@
         };
 
         function redirect() {
-            location.href = "http://sp.pf.mbga.jp/12008305/?guid=ON&amp;url=http%3A%2F%2F125.6.169.35%2Fidolmaster%2Ferror%3Fl_frm%3DSmart_phone_flash_convert_1%26rnd%3D498539258";
+            location.href = "http://sp.pf.mbga.jp/12008305/?guid=ON&amp;url=http%3A%2F%2F125.6.169.35%2Fidolmaster%2Ferror%3Fl_frm%3DSmart_phone_flash_convert_1%26rnd%3D547872146";
         };
 
         function isFlash() {
@@ -258,18 +256,11 @@
             chrome_app_extension_id = 'dnacabmnfmejgfffmcehejcmiciinpej';
     </script>
     <script type='text/javascript' src='../12008305/js/app_sound.js'></script>
-    <link rel="stylesheet" type="text/css" href="../css/base.css" />
+    <link rel="stylesheet" type="text/css" href="../css/base.css?20171116" />
 </head>
 
 <body style="height:100%">
-    <a href="#" id="voiceTouch"></a>
     <div id="container"></div>
-    <script>
-        white_flag = 0;
-        vote_simple_swf_flg = 0;
-    </script>
-    <script src="../12008305/js/boombox.min.js"></script>
-    <script src="../12008305/js/GeneVoice.js"></script>
     <div id="mbga-pf-footer">
         <div class="mbga-pf-footer-container odd-lines mbga-pf-footer-white">
             <ul>
